refactor: simplify stream collectors